[package]
name = "etherscan-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
reqwest = "0.11.12"
anyhow = "1.0.66"
clap = { version = "4.0.18", features=["derive"] }
