[package]
name = "etherscan-cli"
version = "0.0.1"
edition = "2021"
description = "A CLI client for Etherscan"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
reqwest = {version = "0.11.12", features = ["blocking", "json"]}
anyhow = "1.0.66"
clap = { version = "4.0.18", features=["derive"] }
ethers-core = "1.0.0"
dotenv = "0.15.0"
