[package]
name = "etherscan-cli"
version = "0.0.3"
edition = "2021"
rust-version = "1.64"
authors = ["Enrique Ortiz <hi@enriqueortiz.dev>"]
description = "A CLI client for Etherscan"
repository = "https://github.com/Evalir/etherscan-cli"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
reqwest = {version = "0.11.12", features = ["blocking", "json"]}
anyhow = "1.0.66"
clap = { version = "4.0.18", features=["derive"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", version = "1.0.0" }
dotenv = "0.15.0"
hex = "0.4.3"
